# DevelopmentCombination

./: CMakeLists.txt  README.md
main/: main.cpp
src/: constantes.hpp  libreria.cpp  libreria.hpp
tests/: someTest.cpp
